<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="320.dp"
        android:layout_height="320.dp"
        >

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/actor_img_placeholder"
            android:scaleType="centerInside"
            android:background="@drawable/headline_card_bg"
            android:contentDescription="@string/headline_card_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/infoLayerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/genreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12.dp"
                android:layout_marginTop="12.dp"
                android:text="@string/sci_fi"/>

            <View
                android:id="@+id/spaceView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/infoLayerDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12.dp"
                    android:text="@string/interstellar"/>

                <TextView
                    android:id="@+id/descriptionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12.dp"
                    android:layout_marginTop="6.dp"
                    android:layout_marginBottom="12.dp"
                    android:lines="2"
                    android:ellipsize="end"
                    android:text="@string/movie_desc_demo"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

